# create_file_to_link

./: CLAUDE.md  README.md  components.d.ts  package-lock.json  package.json  patch-installer.ps1  tsconfig.json  vite.config.js
src/: App.vue  index.js  main.js  main.ts
src-tauri/: .gitignore  2  Cargo.toml  admin.exe.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/license/: license.txt
src-tauri/nsis/: SimpChinese.nsh
src-tauri/src/: check_file_look_file.rs  copy_move_file.rs  copy_move_file_sync.rs.bak  create_file_link.rs  lib.rs  main.rs  undo_operation.rs
src-tauri/src/check_file_disk/: check_file_look_file.rs  fs_utils.rs  get_free_space.rs  index.rs  mod.rs
src-tauri/wix/: main.wxs
src/assets/: default.js
src/composables/: useAppListener.js  useAppListener.ts  useChangeTheme.js  useChangeTheme.ts  useDragFile.js  useDragFile.ts  useFileOperation.js  useFileOperation.ts  useHistory.js  useHistory.ts  useProgress.js  useProgress.ts
src/config/: index.js  index.ts
src/css/: dark_style.scss  global.css
src/stores/: useConfigStore.js  useConfigStore.ts  useDragStore.js  useDragStore.ts  useFileStore.js  useFileStore.ts  useHistoryStore.js  useHistoryStore.ts  useProgressStore.js  useProgressStore.ts
src/types/: index.ts
src/utils/: fileUtils.js  fileUtils.ts  filenameUtils.js  filenameUtils.ts
src/views/: CurrentProgress.vue  History_card.vue  drag_file_page.vue  title_bar.vue
