[package]
name = "create_file_to_link"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "create_file_to_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[package.metadata.windows]
requestedExecutionLevel = "requireAdministrator"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
fs_extra = "1.3.0"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
fs2 = "0.4.3"

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
